# DSA

./: .gitignore  ChangeLog  LICENSE  Makefile.am  build.sh  configure.ac
DataStructures/Array/: Array.h
DataStructures/ContainerAdaptor/: PriorityQueue.h  Queue.h  Stack.h
DataStructures/ContainerAssociative/: Map.h  Set.h
DataStructures/ContainerSequence/: Array.h  Deque.h  List.h  String.h  Vector.h
DataStructures/ContainerUnorderedAssociative/: UnorderedMap.h  UnorderedSet.h
DataStructures/DisjointSet/: UnionFind.h
DataStructures/Graph/: Graph.h
DataStructures/HashTable/: HashTable.h
DataStructures/Hashing/: Hashing.h
DataStructures/Tree/: AVLTree.h  BinaryIndexedTree.h  BinarySearchTree.h  SegmentTree.h  Trie.h
Problems/: Makefile  test.cpp
Problems/AccountsMerge/: main.cpp
Problems/AirCownditioningII/: main.cpp
Problems/AliceAndBobPlayingFlowerGame/: main.py
Problems/AlternatingGroupII/: main.cpp
Problems/AnImpassionedCircularOfEffection/: main.cpp
Problems/BestSightseeingPair/: main.cpp
Problems/BitwiseXorOfAllPairing/: main.cpp
Problems/BlockGame/: main.cpp
Problems/BreakAPalindrome/: main.cpp
Problems/BuildGates/: main.cpp
Problems/CapacityToShipPackagesWithinDays/: main.cpp
Problems/CheckIfGridCanBeCutIntoSections/: main.py
Problems/CheckIfNumberIsSumOfPowerOfThree/: main.cpp
Problems/CheckIfStringsCanBeMadeEqualWithOperationII/: main.cpp
Problems/CheckIfWordIsValidAfterSubstitutions/: main.cpp
Problems/Chips/: main.cpp
Problems/CielAndDuel/: main.cpp
Problems/CircularBarn/: main.cpp
Problems/ClosetNodeQueriesOnBinarySearchTree/: main.cpp
Problems/ClosetPrimeNumberInRange/: main.cpp
Problems/CombinationIterator/: main.cpp
Problems/ComfortableCows/: main.cpp
Problems/CompareStringsByFrequencyOfSmallestCharacter/: main.cpp
Problems/ConstructMinimumBitwiseArray/: main.cpp
Problems/ConstructStringWithRepeatLimit/: main.cpp
Problems/CountNumberOfBadPairs/: main.cpp
Problems/CountNumberOfFairPairs/: main.cpp
Problems/CountNumberOfMaximumBitOrSubsets/: main.cpp
Problems/CountOfInteresingArrays/: main.cpp  main.py
Problems/CountServersThatCommunicate/: main.cpp
Problems/CountSubstringsWithKFrequencyCharacterI/: main.cpp
Problems/CountTheHiddenSequences/: main.py
Problems/CountTheNumberOfCompletedComponents/: main.cpp
Problems/CountingLiars/: main.cpp
Problems/CowGymnastics/: main.cpp
Problems/CowsSocialDistance/: main.cpp
Problems/DeleteNodesFromLinkedListPresentInArray/: main.cpp
Problems/DesignNumberContainerSystem/: main.cpp
Problems/DestroyingAsteroids/: main.cpp
Problems/DetectCycleIn2DGrid/: main.cpp
Problems/DiamondCollector/: main.cpp
Problems/DisplayTableOfFoodsOrderInRestaurant/: main.cpp
Problems/DivideArrayInSetsOfKthConsecutiveNumbers/: main.cpp
Problems/FactoryMachines/: main.cpp
Problems/FindAllPossibleRecipesFromSupplies/: main.cpp
Problems/FindClosetNodeToGivenTwoNodes/: main.cpp
Problems/FindLeastReachableCity/: main.cpp
Problems/FindMinimumDiameterAfterMergingTwoTrees/: main.cpp
Problems/FindMostFrequentVowelAndConsonant/: main.py
Problems/FindNumberOfDistinctColorsAmongBalls/: main.cpp
Problems/FindPairsWithACertainSum/: main.py
Problems/FindTheLengthOfTheLongestCommonPrefix/: main.py
Problems/FindTheMinimumTimeToReachTheLastRoomI/: main.cpp
Problems/FindTheMinimumTimeToReachTheLastRoomII/: main.cpp
Problems/FindTheNumberOfWaysToPlacePeopleI/: main.py
Problems/FindThePowerOfKsizeSubarraysI/: main.cpp
Problems/FindThePrefixCommonArray/: main.cpp
Problems/FlipColumnsForMaximumNumberOfEqualRows/: main.cpp
Problems/FruitIntoBaskets/: main.cpp
Problems/GeneratingBinaryStringsWithoutZeroAdj/: main.cpp
Problems/GrassEatingConvention/: main.cpp
Problems/GridGame/: main.cpp
Problems/GroupOfSpecialEquivalentStrings/: main.cpp
Problems/HaybaleStacking/: main.cpp
Problems/HexadecimalAndHexatrigesimalConversion/: main.cpp
Problems/HighAccessEmployee/: main.cpp
Problems/HouseRobberIV/: main.cpp
Problems/IrreducibleAnagrams/: main.cpp
Problems/KokoEatingBananas/: main.cpp
Problems/KthDistinctStringInArray/: main.cpp
Problems/KthLargestSumInBinaryTree/: main.cpp
Problems/KthSmallestPrimeFraction/: main.cpp
Problems/LargestDivisibleSubset/: main.cpp
Problems/LargestMergeOfTwoStrings/: main.cpp
Problems/LargestSubmatrixWithRearrangements/: main.cpp
Problems/MinimumXor/: main.cpp
Test/: CMakeLists.txt  TestAVLMap.cpp  TestAVLTree.cpp  TestAVLTreeAndMap.cpp  TestArray.cpp  TestBinaryIndexedTree.cpp  TestBinarySearchTree.cpp  TestDeque.cpp  TestGraph.cpp  TestHashTable.cpp  TestHashing.cpp  TestList.cpp  TestMap.cpp  TestPriorityQueue.cpp  TestQueue.cpp  TestSegmentTree.cpp  TestSet.cpp  TestStack.cpp  TestString.cpp  TestTrie.cpp  TestUnionFind.cpp  TestUnorderedMap.cpp  TestUnorderedSet.cpp  TestVector.cpp  generate_coverage.sh
Test/googletest/: CMakeLists.txt
Test/googletest/googlemock/: CMakeLists.txt
Test/googletest/googletest/: CMakeLists.txt
(+3039 files in other folders)
